"added videoList and selectedVideoPage"

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,7 +1,11 @@
 .App {
   text-align: center;
+  background: #c4c4c4;
 }
 
+body{
+  background: #f7f7f7;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
