--- a/my-app/src/components/cards/card.module.scss
+++ b/my-app/src/components/cards/card.module.scss
@@ -1,3 +1,5 @@
+@import '../../fonts/fonts.scss'; 
+
 .container {
     border-radius: 5px;
     width: 263px;
@@ -35,6 +37,7 @@
                 font-weight: 400;
                 font-size: 10px;
                 color: #000;
+                font-family: "Roboto", sans-serif;
             }
         }
     }
@@ -45,6 +48,7 @@
             font-size: 20px;
             text-align: right;
             color: #4f4f4f;
+            font-family: "Roboto", sans-serif;
         }
     }
 }
