--- a/my-app/src/components/header/header.module.scss
+++ b/my-app/src/components/header/header.module.scss
@@ -6,7 +6,8 @@
         margin: 0 auto;
         display: flex;
         justify-content: space-evenly;
-        .searchWrapper{
+
+        .searchWrapper {
             width: 540px;
             display: flex;
             flex-direction: row;
@@ -14,8 +15,62 @@
             align-items: center;
         }
     }
-    .userWrapper{
-          display: flex;
-          align-items: center;
+
+    .userWrapper {
+        display: flex;
+        align-items: center;
     }
+}
+
+.filter {
+    width: 800px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    .filterText {
+        font-weight: 400;
+        font-size: 12px;
+        color: #929292;
+    }
+
+    .filterItem {
+        p {
+            font-weight: 400;
+            font-size: 12px;
+            text-decoration: underline;
+            text-decoration-skip-ink: none;
+            color: #2f80ed;
+            cursor: pointer;
+        }
+    }
+
+    .filterItemInput {
+        display: flex;
+        align-items: center;
+
+        p {
+            font-weight: 400;
+            font-size: 12px;
+            text-decoration: underline;
+            text-decoration-skip-ink: none;
+            color: #2f80ed;
+            cursor: pointer;
+        }
+
+        input {
+            margin-left: 10px;
+            width: 149px;
+            height: 13px;
+            outline: none;
+            border: none;
+
+        }
+    }
+}
+
+.cardButton{
+    position: relative;
+    bottom: 0px;
 }
