--- a/my-app/src/components/input/input.module.scss
+++ b/my-app/src/components/input/input.module.scss
@@ -2,5 +2,13 @@
     width: 396px;
     height: 24px;
     background: #efefef;
-    padding: 5px 5px 13px 0px;
+    display: flex;
+
+    input {
+        flex: 1;
+        padding: 5px 5px 13px 8px;
+        outline: none;
+        border: none;
+    }
+
 }
