--- a/my-app/src/pages/allVideo/allVideo.module.scss
+++ b/my-app/src/pages/allVideo/allVideo.module.scss
@@ -5,4 +5,11 @@
     flex-wrap: wrap;
     gap: 28px;
     margin: 0 auto;
-}
+   
+} 
+.buttonMore{
+margin:0 auto;
+margin-top: 30px;
+display: flex;
+justify-content: center;
+    }
